--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             flex-direction: column;
             justify-content: center;
             /* Tetap di tengah secara vertikal */
-            align-items: flex-start;
+            align-items: center;
             /* RATA KIRI */
-            padding-left: 10%;
             /* Kasih jarak dari kiri */
+            text-align: center;
             box-sizing: border-box;
         }
 
@@ -173,7 +173,7 @@
 
     <div id="main-content" class="hidden">
         <section class="screen">
-            <h1 class="big-text fade-in">Happy<br>2 Months,<br>Adin.</h1>
+            <h1 class="big-text fade-in">Happy<br>2 Months,<br>Adin ❤</h1>
             <p class="sub-text fade-in">16 Desember 2025 - 16 Februari 2026</p>
         </section>
 
